--- a/larbi-react/src/styles/Global.css
+++ b/larbi-react/src/styles/Global.css
@@ -1,7 +1,13 @@
 :root {
-    --black: #070707;
-    --aquamarine: #86deb7;
-    --blue: #090C9B;
-    --pink: #ffb7ff;
-    --grey: #83858c;
+    --dark-navy: #020c1b;
+    --navy: #0a192f;
+    --light-navy: #112240;
+    --lightest-navy: #233554;
+    --navy-shadow: rgba(2, 12, 27, 0.7);
+    --slate: #8892b0;
+    --light-slate: #a8b2d1;
+    --lightest-slate: #ccd6f6;
+    --white: #e6f1ff;
+    --green-bright: #64ffda;
+    --green-tint: rgba(100, 255, 218, 0.1);
 }
