--- a/larbi-react/src/App.css
+++ b/larbi-react/src/App.css
@@ -36,3 +36,27 @@ html {
   font-size: 46px;
   font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+  .app {
+    flex-direction: column;
+    padding: 40px 24px;
+  }
+
+  .content {
+    padding: 10px 10px;
+    width: 100%;
+  }
+
+  .section-header {
+    width: unset;
+  }
+
+  .section-header::after {
+    display: none;
+  }
+
+  .section-title {
+    font-size: 32px;
+  }
+}
